crates/iroha_version_derive/tests/ui_fail/field_typo_in_version_attribute.stderr
error: Unknown field: `versiond_alias`. Did you mean `versioned_alias`?
 --> tests/ui_fail/field_typo_in_version_attribute.rs:7:24
  |
7 | #[version(version = 1, versiond_alias = "VersionedMessage")]
  |                        ^^^^^^^^^^^^^^

error: Missing field `versioned_alias`
 --> tests/ui_fail/field_typo_in_version_attribute.rs:7:1
  |
7 | #[version(version = 1, versiond_alias = "VersionedMessage")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `version` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `_VersionedMessageV1` in this scope
 --> tests/ui_fail/field_typo_in_version_attribute.rs:5:1
  |
5 | declare_versioned!(VersionedMessage 1..2);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `declare_versioned` (in Nightly builds, run with -Z macro-backtrace for more info)
